# dc

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  dc  dc.1  doc.md  main.cpp  man.md  utest.sh
.gitea/workflows/: dc.yml
.github/workflows/: dc.yml
src/: CMakeLists.txt  adt.cpp  adt.h  bitwise.cpp  bitwise.h  eval.cpp  eval.h  is_num.h  macro.cpp  macro.h  math.cpp  math.h  mathematics.cpp  mathematics.h  num_utils.cpp  num_utils.h  operation.h  stack.cpp  stack.h  statistics.cpp  statistics.h  types.h
tests/: test_acos  test_asin  test_atan  test_band  test_bnot  test_bor  test_bxor  test_clear  test_comb  test_cos  test_count_digits  test_creg  test_div  test_divmod  test_dreg  test_dump  test_dup  test_e  test_exp  test_fact  test_fix  test_im  test_int  test_irdx  test_lastx  test_lasty  test_lastz  test_lfile  test_log  test_lreg  test_lshift  test_meq  test_mgeq  test_mgt  test_mleq  test_mlt  test_mneq  test_mod  test_modexp  test_mul  (+24 more)
